# youtube-music-dl

./: .gitignore  README.md  appimagecraft.yml  pyproject.toml
.github/workflows/: build.yml
youtube_music_dl/: cli.py  main.py
