[tool.poetry]
name = "youtube-music-dl"
version = "0.1.0"
description = "A simple youtube music playlist, song downloader"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ytmusicapi = "^0.17.3"
youtube_dl = "^2021.6.6"
click = "^8.0.1"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli = "youtube_music_dl.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
